# wissenschaftliches-arbeiten

./: 01_Academic_Texts.html  01_Textarten.html  01_Textarten.md  02_Hausarbeiten.html  02_Hausarbeiten.md  02_Term_Papers.html  03_Presentations.html  03_Referate.html  03_Referate.md  04_Literatur.html  04_Literatur.md  04_Literature.html  05_Citation.html  05_Zitieren.html  05_Zitieren.md  06_Textverarbeitung.html  06_Textverarbeitung.md  06_Word_Processing.html  07_Literaturverwaltung.html  07_Literaturverwaltung.md  07_Reference_Management.html  08_Präsentationen.html  08_Präsentationen.md  08_Visual_Presentation.html  09_Pflichtliteratur.html  09_Pflichtliteratur.md  10_Links.html  10_Links.md  99_Titel_override.md  README.md  _config.yml  about.html  about.md  archives.html  authors.html  categories.html  contents.html  contents.md  contributions.html  contributions.md  (+13 more)
_includes/: header.html
_lib/: build.sh  defaults_export.yaml  defaults_html.yaml  defaults_latex.yaml  divtoenv.py  internallinks.py  latex-defs.tex
_sass/: _base.scss
content/: 01_Academic_Texts.md  01_Textarten.md  02_Hausarbeiten.md  02_Term_Papers.md  03_Presentations.md  03_Referate.md  04_Literatur.md  04_Literature.md  05_Citation.md  05_Zitieren.md  06_Textverarbeitung.md  06_Word_Processing.md  07_Literaturverwaltung.md  07_Reference_Management.md  08_Präsentationen.md  08_Visual_Presentation.md  09_Pflichtliteratur.md  10_Links.md  99_Titel_override.md  99_Title_override.md  about.md  contents.md  contributions.md  credits.md  hintergrund.md  home.md  impressum.md  imprint.md  start.md  (+2 more)
(+108 files in other folders)
