[project]
name = "wissenschaftliches-arbeiten-neu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minchin-pelican-plugins-nojekyll>=1.2.0",
    "pelican-pandoc-reader>=2.1.0",
    "pelican[markdown]>=4.10.1",
]

[tool.uv]
dev-dependencies = [
    "invoke>=2.2.0",
]
